--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,8 @@ et_xmlfile==2.0.0
 executing==2.2.0
 fastjsonschema==2.21.1
 filelock==3.13.1
+# Editable Git install with no remote (filesystem-prototype==0.0.1)
+-e /home/ian/Documents/umd/2025Spring/MSML606/filesystem‑prototype
 fonttools==4.56.0
 formulaic==1.1.1
 fqdn==1.5.1
@@ -69,9 +71,11 @@ kiwisolver==1.4.8
 lifelines==0.30.0
 lxml==5.4.0
 Mako==1.3.10
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.1.2
 mpmath==1.3.0
 multitasking==0.0.11
@@ -130,6 +134,7 @@ referencing==0.36.2
 requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==14.0.0
 rpds-py==0.23.1
 scikit-learn==1.6.1
 scipy==1.15.2
